objects/Lead_Conversion_Process_Field__mdt.object
<CustomObject>
    <fields>
        <fullName>Application_Field__c</fullName>
        <label>Application Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoApplicant_Field__c</fullName>
        <label>CoApplicant Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Field__c</fullName>
        <label>Lead Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Field__c</fullName>
        <label>Property Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recorded_Information_Field__c</fullName>
        <label>Recorded Information Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead Conversion Process Field</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Lead_Field__c</columns>
        <columns>Default_Value__c</columns>
        <columns>Application_Field__c</columns>
        <columns>CoApplicant_Field__c</columns>
        <columns>Property_Field__c</columns>
        <columns>Recorded_Information_Field__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Lead Conversion Process Fields</pluralLabel>
</CustomObject>